samples/_failures_safe/1761560227_ddf068_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd39346e.c: In function ‘generate_report’:
./samples/SAFE/__tmp_fd39346e.c:149:36: error: expected ‘)’ at end of input
  149 |         printf("%s: %d\n", analyzer
      |               ~                    ^
      |                                    )
./samples/SAFE/__tmp_fd39346e.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("%s: %d\n", analyzer
      |         ^~~~~~
./samples/SAFE/__tmp_fd39346e.c:149:9: error: expected declaration or statement at end of input
